[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://modules/world_player/ui/inventory_slot.gd" id="1_slot"]

[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_slot")

[node name="ItemLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 9
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CountLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 10
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -14.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2
vertical_alignment = 2
